force-app/main/default/objects/ClaimHeader__x/ClaimHeader__x.object-meta.xml
<CustomObject>
    <externalDataSource>ClaimsDataSource</externalDataSource>
    <externalName>public$claim_header</externalName>
    <label>Claim Header</label>
    <pluralLabel>Claim Headers</pluralLabel>
</CustomObject>