force-app/main/default/objects/ClaimHeader__x/fields/AcceptedOn__c.field-meta.xml
<CustomField>
    <fullName>AcceptedOn__c</fullName>
    <externalDeveloperName>acceptedon</externalDeveloperName>
    <inlineHelpText>Date on which the claim was accepted.</inlineHelpText>
    <label>Accepted On</label>
    <type>Date</type>
</CustomField>