force-app/main/default/objects/ClaimHeader__x/fields/AdjudicatedAmount__c.field-meta.xml
<CustomField>
    <fullName>AdjudicatedAmount__c</fullName>
    <externalDeveloperName>adjudicatedamount</externalDeveloperName>
    <inlineHelpText>Amount paid for the service by primary payer.</inlineHelpText>
    <label>Adjudicated Amount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>