force-app/main/default/objects/ClaimHeader__x/fields/AdjudicatedOn__c.field-meta.xml
<CustomField>
    <fullName>AdjudicatedOn__c</fullName>
    <externalDeveloperName>adjudicatedon</externalDeveloperName>
    <inlineHelpText>Date on which adjudicated amount was paid by the primary payer.</inlineHelpText>
    <label>Adjudicated On</label>
    <type>Date</type>
</CustomField>