force-app/main/default/objects/ClaimHeader__x/fields/BilledDRGCode__c.field-meta.xml
<CustomField>
    <fullName>BilledDRGCode__c</fullName>
    <externalDeveloperName>billed_drg_code</externalDeveloperName>
    <inlineHelpText>Diagnosis-related group (DRG) code.</inlineHelpText>
    <label>Billed DRG Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>