force-app/main/default/objects/ClaimHeader__x/fields/ClaimAmount__c.field-meta.xml
<CustomField>
    <fullName>ClaimAmount__c</fullName>
    <externalDeveloperName>claimamount</externalDeveloperName>
    <inlineHelpText>Amount submitted with the original claim.</inlineHelpText>
    <label>Claim Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>