force-app/main/default/objects/ClaimHeader__x/fields/ClaimNumber__c.field-meta.xml
<CustomField>
    <fullName>ClaimNumber__c</fullName>
    <externalDeveloperName>claimnumber</externalDeveloperName>
    <inlineHelpText>ID of the claim.</inlineHelpText>
    <label>Claim Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>