force-app/main/default/objects/ClaimHeader__x/fields/ClaimStatus__c.field-meta.xml
<CustomField>
    <fullName>ClaimStatus__c</fullName>
    <externalDeveloperName>claimstatus</externalDeveloperName>
    <inlineHelpText>Current status of the claim.</inlineHelpText>
    <label>Claim Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>