force-app/main/default/objects/ClaimHeader__x/fields/DrugName__c.field-meta.xml
<CustomField>
    <fullName>DrugName__c</fullName>
    <externalDeveloperName>drug_name</externalDeveloperName>
    <inlineHelpText>Name of the drug.</inlineHelpText>
    <label>Drug Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>