force-app/main/default/objects/ClaimHeader__x/fields/DrugQuantity__c.field-meta.xml
<CustomField>
    <fullName>DrugQuantity__c</fullName>
    <externalDeveloperName>drug_quantity</externalDeveloperName>
    <inlineHelpText>Authorized quantity per refill.</inlineHelpText>
    <label>Drug Quantity</label>
    <length>64</length>
    <type>Text</type>
</CustomField>