force-app/main/default/objects/ClaimHeader__x/fields/DrugSupplyDays__c.field-meta.xml
<CustomField>
    <fullName>DrugSupplyDays__c</fullName>
    <externalDeveloperName>drug_supply_days</externalDeveloperName>
    <inlineHelpText>Number of days the supply is authorized.</inlineHelpText>
    <label>Drug Supply Days</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>