force-app/main/default/objects/ClaimHeader__x/fields/EDIMessage__c.field-meta.xml
<CustomField>
    <fullName>EDIMessage__c</fullName>
    <externalDeveloperName>edi_message</externalDeveloperName>
    <inlineHelpText>Text of the original EDI message.</inlineHelpText>
    <label>Raw EDI Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>