force-app/main/default/objects/ClaimHeader__x/fields/FillDate__c.field-meta.xml
<CustomField>
    <fullName>FillDate__c</fullName>
    <externalDeveloperName>fill_date</externalDeveloperName>
    <inlineHelpText>Date on which the drug was filled by the pharmacy.</inlineHelpText>
    <label>Fill Date</label>
    <type>Date</type>
</CustomField>