force-app/main/default/objects/ClaimHeader__x/fields/FormularyTier__c.field-meta.xml
<CustomField>
    <fullName>FormularyTier__c</fullName>
    <externalDeveloperName>formulary_tier</externalDeveloperName>
    <inlineHelpText>The formulary tier level for the drug.</inlineHelpText>
    <label>Formulary Tier</label>
    <length>64</length>
    <type>Text</type>
</CustomField>