force-app/main/default/objects/ClaimHeader__x/fields/HIC3ClassCode__c.field-meta.xml
<CustomField>
    <fullName>HIC3ClassCode__c</fullName>
    <externalDeveloperName>std_hic_3_desc</externalDeveloperName>
    <inlineHelpText>Hierarchical Specific Therapeutic (HIC3) class code assigned to the service.</inlineHelpText>
    <label>HIC3 Class Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>