force-app/main/default/objects/ClaimHeader__x/fields/IsFormulaStatus__c.field-meta.xml
<CustomField>
    <fullName>IsFormulaStatus__c</fullName>
    <externalDeveloperName>isformulastatus</externalDeveloperName>
    <inlineHelpText>Indicates whether the drug is approved for coverage by the payer.</inlineHelpText>
    <label>Is Formula Status</label>
    <length>8</length>
    <type>Text</type>
</CustomField>