force-app/main/default/objects/ClaimHeader__x/fields/IsGeneric__c.field-meta.xml
<CustomField>
    <fullName>IsGeneric__c</fullName>
    <externalDeveloperName>isgeneric</externalDeveloperName>
    <inlineHelpText>Indicates whether the drug is generic.</inlineHelpText>
    <label>Is Generic</label>
    <length>8</length>
    <type>Text</type>
</CustomField>