force-app/main/default/objects/ClaimHeader__x/fields/IsRefillAuthorized__c.field-meta.xml
<CustomField>
    <fullName>IsRefillAuthorized__c</fullName>
    <externalDeveloperName>refill_authorized</externalDeveloperName>
    <inlineHelpText>Indicates whether refills for the drug are authorized.</inlineHelpText>
    <label>Is Refill Authorized</label>
    <length>8</length>
    <type>Text</type>
</CustomField>