force-app/main/default/objects/ClaimHeader__x/fields/MemberPlanId__c.field-meta.xml
<CustomField>
    <fullName>MemberPlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>memberplanid</externalDeveloperName>
    <inlineHelpText>ID of member plan that this claim is related to.</inlineHelpText>
    <label>Member Plan</label>
    <referenceTo>MemberPlan</referenceTo>
    <relationshipLabel>Claim Headers (Member Plan)</relationshipLabel>
    <relationshipName>Claim_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>