force-app/main/default/objects/ClaimHeader__x/fields/NDC__c.field-meta.xml
<CustomField>
    <fullName>NDC__c</fullName>
    <externalDeveloperName>national_drug_code</externalDeveloperName>
    <inlineHelpText>National Drug Code (NDC) identification number for the drug associated with the claim.</inlineHelpText>
    <label>NDC</label>
    <length>64</length>
    <type>Text</type>
</CustomField>