force-app/main/default/objects/ClaimHeader__x/fields/PartBorPartD__c.field-meta.xml
<CustomField>
    <fullName>PartBorPartD__c</fullName>
    <externalDeveloperName>part_b_or_part_d</externalDeveloperName>
    <inlineHelpText>Indicates whether the drug has Medicare Part B or Part D coverage. For example, enter &quot;Type B&quot; when the drug is covered under Medicare Part B.</inlineHelpText>
    <label>Part B or Part D</label>
    <length>64</length>
    <type>Text</type>
</CustomField>