force-app/main/default/objects/ClaimHeader__x/fields/PayerId__c.field-meta.xml
<CustomField>
    <fullName>PayerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>payerid</externalDeveloperName>
    <inlineHelpText>ID of the payer that this claim is related to.</inlineHelpText>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claim Headers (Payer)</relationshipLabel>
    <relationshipName>Claim_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>