force-app/main/default/objects/ClaimHeader__x/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <externalDeveloperName>paymentdate</externalDeveloperName>
    <inlineHelpText>Date on which claim was paid out.</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>