force-app/main/default/objects/ClaimHeader__x/fields/PreauthNumber__c.field-meta.xml
<CustomField>
    <fullName>PreauthNumber__c</fullName>
    <externalDeveloperName>preauthnumber</externalDeveloperName>
    <inlineHelpText>Preauthorization number for the service.</inlineHelpText>
    <label>Preauth Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>