force-app/main/default/objects/ClaimHeader__x/fields/ReferralNumber__c.field-meta.xml
<CustomField>
    <fullName>ReferralNumber__c</fullName>
    <externalDeveloperName>referralnumber</externalDeveloperName>
    <inlineHelpText>ID of the referral for the service.</inlineHelpText>
    <label>Referral Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>