force-app/main/default/objects/ClaimHeader__x/fields/SourceSystemIdentifier__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemIdentifier__c</fullName>
    <externalDeveloperName>source_system_identifier</externalDeveloperName>
    <inlineHelpText>Identifer of the system where this claim was sourced from.</inlineHelpText>
    <label>Source System Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>