force-app/main/default/objects/ClaimHeader__x/fields/StandardGenericTherapeuticClass__c.field-meta.xml
<CustomField>
    <fullName>StandardGenericTherapeuticClass__c</fullName>
    <externalDeveloperName>standard_generic_therapeutic_class</externalDeveloperName>
    <inlineHelpText>Therapeutic drug category according to the American Hospital Formulary Service (AHFS) classification system.</inlineHelpText>
    <label>Standard Generic Therapeutic Class</label>
    <length>64</length>
    <type>Text</type>
</CustomField>