force-app/main/default/objects/ClaimHeader__x/fields/StandardTherapeuticClassDescription__c.field-meta.xml
<CustomField>
    <fullName>StandardTherapeuticClassDescription__c</fullName>
    <externalDeveloperName>standard_therapeutic_class_description</externalDeveloperName>
    <inlineHelpText>Description of the therapeutic category of drug according to the American Hospital Formulary Service (AHFS) classification system.</inlineHelpText>
    <label>Standard Therapeutic Class Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>