force-app/main/default/objects/ClaimHeader__x/fields/SubmittedOn__c.field-meta.xml
<CustomField>
    <fullName>SubmittedOn__c</fullName>
    <externalDeveloperName>submittedon</externalDeveloperName>
    <inlineHelpText>Claim submission date.</inlineHelpText>
    <label>Submitted On</label>
    <type>Date</type>
</CustomField>