force-app/main/default/objects/ClaimHeader__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <externalDeveloperName>type</externalDeveloperName>
    <inlineHelpText>Type of claim.</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>