force-app/main/default/objects/ClaimHeader__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>